--- a/bower.json
+++ b/bower.json
@@ -12,7 +12,8 @@
     "angular-route": "^1.3.0",
     "angular-sanitize": "^1.3.0",
     "angular-touch": "^1.3.0",
-    "bourbon": "~4.0.2"
+    "bourbon": "~4.0.2",
+    "angulartics": "~0.19.0"
   },
   "devDependencies": {
     "angular-mocks": "^1.3.0"
