--- a/bower.json
+++ b/bower.json
@@ -13,7 +13,8 @@
     "angular-sanitize": "^1.3.0",
     "angular-touch": "^1.3.0",
     "bourbon": "~4.0.2",
-    "angulartics": "~0.19.0"
+    "angulartics": "~0.19.0",
+    "morrisjs": "~0.5.1"
   },
   "devDependencies": {
     "angular-mocks": "^1.3.0"
