--- a/bower.json
+++ b/bower.json
@@ -15,16 +15,14 @@
     "bourbon": "~4.0.2",
     "angular-fontawesome": "~0.1.2",
     "angulartics": "~0.19.0",
-    "morrisjs": "~0.5.1",
-    "flot": "~0.8.3",
-    "flot.tooltip": "~0.8.4",
-    "angular-flot": "~0.0.6",
-    "flot-spline": "*",
     "angular-local-storage": "~0.2.2"
   },
   "devDependencies": {
     "angular-mocks": "^1.3.0"
   },
   "appPath": "app",
-  "moduleName": "trialsReportApp"
+  "moduleName": "trialsReportApp",
+  "resolutions": {
+    "angular": "^1.3.0"
+  }
 }
