--- a/bower.json
+++ b/bower.json
@@ -15,7 +15,8 @@
     "bourbon": "~4.0.2",
     "angular-fontawesome": "~0.1.2",
     "angulartics": "~0.19.0",
-    "angular-local-storage": "~0.2.2"
+    "angular-local-storage": "~0.2.2",
+    "angular-toastr": "~1.4.1"
   },
   "devDependencies": {
     "angular-mocks": "^1.3.0"
