--- a/bower.json
+++ b/bower.json
@@ -16,7 +16,8 @@
     "angular-fontawesome": "~0.1.2",
     "angulartics": "~0.19.0",
     "angular-local-storage": "~0.2.2",
-    "angular-toastr": "~1.4.1"
+    "angular-toastr": "~1.4.1",
+    "angular-zeroclipboard": "~0.4.3"
   },
   "devDependencies": {
     "angular-mocks": "^1.3.0"
