--- a/bower.json
+++ b/bower.json
@@ -17,7 +17,8 @@
     "angulartics": "~0.19.0",
     "angular-local-storage": "~0.2.2",
     "angular-toastr": "~1.4.1",
-    "angular-zeroclipboard": "~0.4.3"
+    "angular-zeroclipboard": "~0.4.3",
+    "angular-filter": "~0.5.4"
   },
   "devDependencies": {
     "angular-mocks": "^1.3.0"
