--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "gzippo": "^0.2.0",
     "http-proxy": "1.11.1",
     "moment": "^2.10.3",
-    "morgan": "^1.6.1",
     "newrelic": "^1.20.2",
     "request": "^2.40.0"
   },
@@ -19,6 +18,7 @@
     "grunt-concurrent": "^1.0.0",
     "grunt-contrib-clean": "^0.6.0",
     "grunt-contrib-compass": "^1.0.0",
+    "grunt-contrib-compress": "^0.13.0",
     "grunt-contrib-concat": "^0.5.0",
     "grunt-contrib-connect": "^0.9.0",
     "grunt-contrib-copy": "^0.7.0",
