--- a/bower.json
+++ b/bower.json
@@ -5,7 +5,7 @@
     "angular": "^1.3.0",
     "bootstrap-sass-official": "^3.2.0",
     "angular-loading-bar": "~0.5.1",
-    "angular-bootstrap": "~0.13.1",
+    "angular-bootstrap": "steffanlong/bootstrap-bower#0.13.2-SNAPSHOT",
     "angular-animate": "^1.3.0",
     "angular-cookies": "^1.3.0",
     "angular-resource": "^1.3.0",
