--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   "devDependencies": {
     "grunt": "^0.4.5",
     "grunt-angular-templates": "^0.5.7",
-    "grunt-autoprefixer": "^2.0.0",
+    "grunt-postcss": "^0.5.5",
+    "autoprefixer-core": "^5.2.1",
     "grunt-build-control": "^0.5.0",
     "grunt-concurrent": "^1.0.0",
     "grunt-contrib-clean": "^0.6.0",
