--- a/bower.json
+++ b/bower.json
@@ -2,22 +2,22 @@
   "name": "trials-report",
   "version": "1.0.0",
   "dependencies": {
-    "angular": "^1.3.0",
-    "bootstrap-sass-official": "^3.2.0",
-    "angular-loading-bar": "~0.5.1",
+    "angular": "^1.4.3",
+    "angulartics": "^0.20.0",
+    "angular-animate": "^1.4.3",
     "angular-bootstrap": "steffanlong/bootstrap-bower#0.13.2-SNAPSHOT",
-    "angular-animate": "^1.3.0",
-    "angular-cookies": "^1.3.0",
-    "angular-resource": "^1.3.0",
-    "angular-route": "^1.3.0",
-    "angular-sanitize": "^1.3.0",
-    "angular-touch": "^1.3.0",
-    "bourbon": "~4.0.2",
-    "angular-fontawesome": "~0.1.2",
-    "angulartics": "~0.19.0",
-    "angular-local-storage": "~0.2.2",
-    "angular-toastr": "~1.4.1",
-    "angular-filter": "~0.5.4"
+    "angular-cookies": "^1.4.3",
+    "angular-filter": "^0.5.4",
+    "angular-fontawesome": "^0.4.0",
+    "angular-loading-bar": "^0.8.0",
+    "angular-local-storage": "^0.2.2",
+    "angular-resource": "^1.4.3",
+    "angular-route": "^1.4.3",
+    "angular-sanitize": "^1.4.3",
+    "angular-toastr": "^1.4.1",
+    "angular-touch": "^1.4.3",
+    "bootstrap-sass-official": "^3.2.0",
+    "bourbon": "^4.2.3"
   },
   "devDependencies": {
     "angular-mocks": "^1.3.0"
@@ -25,6 +25,6 @@
   "appPath": "app",
   "moduleName": "trialsReportApp",
   "resolutions": {
-    "angular": "^1.3.0"
+    "angular": "^1.4.3"
   }
 }
