--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "trialsscout",
   "version": "1.0.0",
+  "license": "SEE LICENSE IN LICENSE.md",
   "dependencies": {
     "express": "^3.21.1",
     "grunt-connect-proxy": "^0.2.0",
@@ -10,41 +11,44 @@
     "newrelic": "^1.20.2",
     "request": "^2.40.0"
   },
-  "repository": {},
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/SteffanLong/DestinyTrialsReport.git"
+  },
   "devDependencies": {
+    "autoprefixer-core": "^5.2.1",
     "grunt": "^0.4.5",
     "grunt-angular-templates": "^0.5.7",
-    "grunt-postcss": "^0.5.5",
-    "autoprefixer-core": "^5.2.1",
     "grunt-build-control": "^0.5.0",
-    "grunt-concurrent": "^1.0.0",
+    "grunt-concurrent": "^2.0.0",
     "grunt-contrib-clean": "^0.6.0",
-    "grunt-contrib-compass": "^1.0.0",
+    "grunt-contrib-compass": "^1.0.3",
     "grunt-contrib-compress": "^0.13.0",
-    "grunt-contrib-concat": "^0.5.0",
-    "grunt-contrib-connect": "^0.9.0",
-    "grunt-contrib-copy": "^0.7.0",
-    "grunt-contrib-cssmin": "^0.10.0",
-    "grunt-contrib-htmlmin": "^0.3.0",
-    "grunt-contrib-imagemin": "^0.9.2",
-    "grunt-contrib-jshint": "^0.10.0",
-    "grunt-contrib-uglify": "^0.6.0",
+    "grunt-contrib-concat": "^0.5.1",
+    "grunt-contrib-connect": "^0.10.1",
+    "grunt-contrib-copy": "^0.8.0",
+    "grunt-contrib-cssmin": "^0.13.0",
+    "grunt-contrib-htmlmin": "^0.4.0",
+    "grunt-contrib-imagemin": "^0.9.4",
+    "grunt-contrib-jshint": "^0.11.2",
+    "grunt-contrib-uglify": "^0.9.1",
     "grunt-contrib-watch": "^0.6.1",
-    "grunt-file-creator": "^0.1.2",
-    "grunt-filerev": "^2.1.2",
+    "grunt-file-creator": "^0.1.3",
+    "grunt-filerev": "^2.3.1",
     "grunt-google-cdn": "^0.4.3",
     "grunt-mkdir": "^0.1.2",
-    "grunt-newer": "^0.8.0",
-    "grunt-ng-annotate": "^0.9.2",
-    "grunt-shell": "^1.1.1",
-    "grunt-svgmin": "^2.0.0",
-    "grunt-usemin": "^2.6.2",
+    "grunt-newer": "^1.1.1",
+    "grunt-ng-annotate": "^1.0.1",
+    "grunt-postcss": "^0.5.5",
+    "grunt-shell": "^1.1.2",
+    "grunt-svgmin": "^2.0.1",
+    "grunt-usemin": "^3.0.0",
     "grunt-wiredep": "^2.0.0",
-    "jshint-stylish": "^1.0.0",
-    "load-grunt-tasks": "^1.0.0",
-    "time-grunt": "^1.0.0"
+    "jshint-stylish": "^2.0.1",
+    "load-grunt-tasks": "^3.2.0",
+    "time-grunt": "^1.2.1"
   },
   "engines": {
-    "node": ">=0.10.0"
+    "node": "^0.12.7"
   }
 }
