--- a/bower.json
+++ b/bower.json
@@ -4,6 +4,7 @@
   "dependencies": {
     "angular": "^1.4.3",
     "angulartics": "^0.20.0",
+    "angulartics-google-analytics": "^0.1.0",
     "angular-animate": "^1.4.3",
     "angular-bootstrap": "steffanlong/bootstrap-bower#0.13.2-SNAPSHOT",
     "angular-cookies": "^1.4.3",
@@ -25,6 +26,8 @@
   "appPath": "app",
   "moduleName": "trialsReportApp",
   "resolutions": {
-    "angular": "^1.4.3"
+    "angular": "^1.4.3",
+    "angulartics": "^0.20.0",
+    "waypoints": "~3.1.1"
   }
 }
