--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "grunt-contrib-watch": "^0.6.1",
     "grunt-file-creator": "^0.1.3",
     "grunt-filerev": "^2.3.1",
+    "grunt-karma": "^0.12.0",
     "grunt-mkdir": "^0.1.2",
     "grunt-newer": "^1.1.1",
     "grunt-ng-annotate": "^1.0.1",
@@ -43,8 +44,12 @@
     "grunt-svgmin": "^2.0.1",
     "grunt-usemin": "^3.0.0",
     "grunt-wiredep": "^2.0.0",
+    "jasmine-core": "^2.3.4",
     "jshint-stylish": "^2.0.1",
+    "karma-jasmine": "^0.3.6",
+    "karma-phantomjs-launcher": "^0.2.0",
     "load-grunt-tasks": "^3.2.0",
+    "phantomjs": "^1.9.17",
     "time-grunt": "^1.2.1"
   },
   "engines": {
