more Travis CI fixes

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,6 @@
  node_js: stable
 
  before_script:
-  - npm install --quiet -g grunt-cli karma
-  - npm install
+  - npm install -g grunt-cli
 
- script: grunt
+ script: grunt test
