--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "trialsscout",
-  "version": "1.0.0",
-  "license": "SEE LICENSE IN LICENSE.md",
+  "name": "trials-report",
+  "version": "1.1.0",
+  "license": "Artistic-2.0",
   "dependencies": {
     "express": "^3.21.1",
     "grunt-connect-proxy": "^0.2.0",
@@ -9,7 +9,11 @@
     "http-proxy": "1.11.1",
     "moment": "^2.10.3",
     "newrelic": "^1.20.2",
-    "request": "^2.40.0"
+    "adm-zip": "^0.4.7",
+    "request": "^2.57.0",
+    "request-promise": "^0.4.2",
+    "sqlite3": "^3.0.8",
+    "unzip": "^0.1.11"
   },
   "repository": {
     "type": "git",
