forgot comma in package

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "author": "https://github.com/SteffanLong/DestinyTrialsReport/graphs/contributors"
+  "author": "https://github.com/SteffanLong/DestinyTrialsReport/graphs/contributors",
   "name": "trials-report",
   "version": "1.1.0",
   "license": "Artistic-2.0",
