--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,8 @@
  node_js: stable
 
  before_script:
+  - npm install -g bower
   - npm install -g grunt-cli
-  - bower install
+  - bower install -f
 
  script: grunt test
