--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@
  before_script:
   - npm install -g bower
   - npm install -g grunt-cli
+  - gem install compass --version "=1.1.0.alpha.3"
   - bower install -f
 
  script: grunt test
