--- a/.bithoundrc
+++ b/.bithoundrc
@@ -6,6 +6,7 @@
     "**/app/scripts/definitions/en/DestinyHeavyWeaponDefinitions.js",
     "**/app/scripts/definitions/en/DestinyEmblemDefinitions.js",
     "**/app/scripts/definitions/en/DestinyTalentGridDefinition.js",
+    "**/app/scripts/definitions/en/DestinyMedalDefinition.js",
     "**/proxy.js",
     "**/manifest.js",
     "app/lib/chardinjs.min.js"
