--- a/bower.json
+++ b/bower.json
@@ -18,7 +18,9 @@
     "angular-toastr": "^1.4.1",
     "angular-touch": "^1.4.3",
     "bootstrap-sass-official": "^3.3.5",
-    "bourbon": "^4.2.3"
+    "bourbon": "^4.2.3",
+    "angular-timer": "~1.3.3",
+    "github-fork-ribbon-css": "~0.1.1"
   },
   "devDependencies": {
     "angular-mocks": "^1.3.0"
