--- a/bower.json
+++ b/bower.json
@@ -1,12 +1,12 @@
 {
   "name": "trials-report",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "dependencies": {
     "angular": "^1.4.3",
     "angulartics": "^0.20.0",
     "angulartics-google-analytics": "^0.1.0",
     "angular-animate": "^1.4.3",
-    "angular-bootstrap": "steffanlong/bootstrap-bower#0.13.2-SNAPSHOT",
+    "angular-bootstrap": "^0.13.2",
     "angular-cookies": "^1.4.3",
     "angular-filter": "^0.5.4",
     "angular-fontawesome": "^0.4.0",
@@ -19,8 +19,8 @@
     "angular-touch": "^1.4.3",
     "bootstrap-sass-official": "^3.3.5",
     "bourbon": "^4.2.3",
-    "angular-timer": "~1.3.3",
-    "github-fork-ribbon-css": "~0.1.1",
+    "angular-timer": "^1.3.3",
+    "github-fork-ribbon-css": "^0.1.1",
     "angular-auto-height": "twygmbh/angular-auto-height"
   },
   "devDependencies": {
@@ -29,8 +29,6 @@
   "appPath": "app",
   "moduleName": "trialsReportApp",
   "resolutions": {
-    "angular": "^1.4.3",
-    "angulartics": "^0.20.0",
-    "waypoints": "~3.1.1"
+    "angular": "^1.4.3"
   }
 }
