--- a/bower.json
+++ b/bower.json
@@ -20,8 +20,7 @@
     "bootstrap-sass-official": "^3.3.5",
     "bourbon": "^4.2.3",
     "angular-timer": "^1.3.3",
-    "github-fork-ribbon-css": "^0.1.1",
-    "angular-auto-height": "twygmbh/angular-auto-height"
+    "github-fork-ribbon-css": "^0.1.1"
   },
   "devDependencies": {
     "angular-mocks": "^1.3.0"
