--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,7 @@
 {
   "name": "trials-report",
+  "moduleName": "trialsReportApp",
+  "appPath": "app",
   "version": "1.1.0",
   "dependencies": {
     "angular": "^1.4.3",
@@ -25,8 +27,13 @@
   "devDependencies": {
     "angular-mocks": "^1.3.0"
   },
-  "appPath": "app",
-  "moduleName": "trialsReportApp",
+  "overrides": {
+    "github-fork-ribbon-css": {
+      "main": [
+        "gh-fork-ribbon.css"
+      ]
+    }
+  },
   "resolutions": {
     "angular": "^1.4.3"
   }
