--- a/bower.json
+++ b/bower.json
@@ -21,18 +21,10 @@
     "angular-toastr": "^1.4.1",
     "angular-touch": "^1.4.3",
     "bootstrap-sass-official": "^3.3.5",
-    "bourbon": "^4.2.3",
-    "github-fork-ribbon-css": "^0.1.1"
+    "bourbon": "^4.2.3"
   },
   "devDependencies": {
     "angular-mocks": "^1.3.0"
-  },
-  "overrides": {
-    "github-fork-ribbon-css": {
-      "main": [
-        "gh-fork-ribbon.css"
-      ]
-    }
   },
   "resolutions": {
     "angular": "^1.4.3"
