--- a/package.json
+++ b/package.json
@@ -5,11 +5,13 @@
   "license": "Artistic-2.0",
   "homepage": "http://www.destinytrialsreport.com/",
   "dependencies": {
+    "adm-zip": "^0.4.7",
+    "compression": "^1.5.2",
     "express": "^3.21.1",
+    "express-subdomain": "^1.0.3",
     "grunt-connect-proxy": "^0.2.0",
     "http-proxy": "1.11.1",
     "moment": "^2.10.3",
-    "adm-zip": "^0.4.7",
     "request": "^2.57.0",
     "request-promise": "^0.4.2",
     "sqlite3": "^3.0.8",
