--- a/bower.json
+++ b/bower.json
@@ -21,7 +21,8 @@
     "angular-toastr": "^1.4.1",
     "angular-touch": "^1.4.3",
     "bootstrap-sass-official": "^3.3.5",
-    "bourbon": "^4.2.3"
+    "bourbon": "^4.2.3",
+    "bootstrap-material-design": "~0.3.0"
   },
   "devDependencies": {
     "angular-mocks": "^1.3.0"
