--- a/bower.json
+++ b/bower.json
@@ -4,13 +4,13 @@
   "appPath": "app",
   "version": "1.1.0",
   "dependencies": {
-    "angular": "^1.4.3",
+    "angular": "^1.4.4",
     "angulartics": "^0.20.0",
     "angulartics-google-analytics": "^0.1.0",
     "angular-animate": "^1.4.3",
     "angular-bootstrap": "^0.13.2",
     "angular-cookies": "^1.4.3",
-    "angular-filter": "^0.5.4",
+    "angular-filter": "^0.5.5",
     "angular-fontawesome": "^0.4.0",
     "angular-loading-bar": "^0.8.0",
     "angular-local-storage": "^0.2.2",
@@ -20,14 +20,14 @@
     "angular-timer": "^1.3.3",
     "angular-toastr": "^1.4.1",
     "angular-touch": "^1.4.3",
+    "bootstrap-material-design": "^0.3.0",
     "bootstrap-sass-official": "^3.3.5",
-    "bourbon": "^4.2.3",
-    "bootstrap-material-design": "~0.3.0"
+    "bourbon": "^4.2.3"
   },
   "devDependencies": {
     "angular-mocks": "^1.3.0"
   },
   "resolutions": {
-    "angular": "^1.4.3"
+    "angular": "^1.4.4"
   }
 }
