--- a/bower.json
+++ b/bower.json
@@ -20,8 +20,8 @@
     "angular-timer": "^1.3.3",
     "angular-toastr": "^1.4.1",
     "angular-touch": "^1.4.3",
+    "bootstrap": "^3.3.4",
     "bootstrap-material-design": "^0.3.0",
-    "bootstrap-sass-official": "^3.3.5",
     "bourbon": "^4.2.3"
   },
   "devDependencies": {
