--- a/bower.json
+++ b/bower.json
@@ -20,7 +20,7 @@
     "angular-timer": "^1.3.3",
     "angular-toastr": "^1.4.1",
     "angular-touch": "^1.4.3",
-    "bootstrap": "^3.3.4",
+    "bootstrap": "^3.3.5",
     "bootstrap-material-design": "^0.3.0",
     "bourbon": "^4.2.3"
   },
@@ -29,5 +29,13 @@
   },
   "resolutions": {
     "angular": "^1.4.4"
+  },
+  "overrides": {
+    "bootstrap": {
+      "main": [
+        "dist/css/bootstrap.css",
+        "dist/js/bootstrap.js"
+      ]
+    }
   }
 }
