--- a/bower.json
+++ b/bower.json
@@ -20,6 +20,7 @@
     "angular-timer": "^1.3.3",
     "angular-toastr": "^1.4.1",
     "angular-touch": "^1.4.3",
+    "arrive": "^2.2.0",
     "bootstrap": "^3.3.5",
     "bootstrap-material-design": "^0.3.0",
     "bourbon": "^4.2.3"
