--- a/bower.json
+++ b/bower.json
@@ -11,9 +11,7 @@
     "angular-bootstrap": "^0.13.3",
     "angular-cookies": "^1.4.3",
     "angular-filter": "^0.5.5",
-    "angular-fontawesome": "^0.4.0",
     "angular-loading-bar": "^0.8.0",
-    "angular-local-storage": "^0.2.2",
     "angular-resource": "^1.4.3",
     "angular-route": "^1.4.3",
     "angular-sanitize": "^1.4.3",
@@ -22,8 +20,7 @@
     "angular-touch": "^1.4.3",
     "arrive": "^2.2.0",
     "bootstrap": "^3.3.5",
-    "bootstrap-material-design": "^0.3.0",
-    "bourbon": "^4.2.3"
+    "bootstrap-material-design": "^0.3.0"
   },
   "devDependencies": {
     "angular-mocks": "^1.3.0"
