--- a/bower.json
+++ b/bower.json
@@ -19,11 +19,12 @@
     "angular-sanitize": "^1.4.3",
     "angular-timer": "^1.3.3",
     "angular-toastr": "^1.4.1",
-    "angular-touch": "^1.4.3",
+    "angular-touch": "~1.4.4",
     "arrive": "^2.2.0",
     "bootstrap": "^3.3.5",
     "bootstrap-material-design": "^0.3.0",
-    "bourbon": "^4.2.3"
+    "bourbon": "^4.2.3",
+    "angular-carousel": "~0.3.12"
   },
   "devDependencies": {
     "angular-mocks": "^1.3.0"
