--- a/bower.json
+++ b/bower.json
@@ -9,14 +9,14 @@
     "angulartics-google-analytics": "^0.1.0",
     "angular-animate": "^1.4.3",
     "angular-bootstrap": "^0.13.3",
+    "angular-carousel": "^0.3.12",
     "angular-loading-bar": "^0.8.0",
     "angular-route": "^1.4.3",
     "angular-toastr": "^1.4.1",
     "angular-touch": "~1.4.4",
     "arrive": "^2.2.0",
     "bootstrap": "^3.3.5",
-    "bootstrap-material-design": "^0.3.0",
-    "angular-carousel": "~0.3.12"
+    "bootstrap-material-design": "^0.3.0"
   },
   "resolutions": {
     "angular": "^1.4.4"
