--- a/bower.json
+++ b/bower.json
@@ -18,6 +18,9 @@
     "bootstrap": "^3.3.5",
     "bootstrap-material-design": "^0.3.0"
   },
+  "devDependencies": {
+    "angular-mocks": "^1.3.0"
+  },
   "resolutions": {
     "angular": "^1.4.4"
   },
