--- a/bower.json
+++ b/bower.json
@@ -16,7 +16,8 @@
     "angular-touch": "^1.4.4",
     "arrive": "^2.2.0",
     "bootstrap": "^3.3.5",
-    "bootstrap-material-design": "^0.3.0"
+    "bootstrap-material-design": "^0.3.0",
+    "angular-moment": "~0.10.2"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.4"
