--- a/bower.json
+++ b/bower.json
@@ -13,6 +13,7 @@
     "angular-loading-bar": "^0.8.0",
     "angular-moment": "^0.10.2",
     "angular-route": "^1.4.4",
+    "angular-strap": "^2.3.1",
     "angular-toastr": "^1.4.1",
     "angular-touch": "^1.4.4",
     "arrive": "^2.2.0",
