--- a/bower.json
+++ b/bower.json
@@ -10,6 +10,7 @@
     "angular-animate": "^1.4.4",
     "angular-bootstrap": "^0.13.3",
     "angular-carousel": "^0.3.12",
+    "angular-cookies": "^1.4.4",
     "angular-loading-bar": "^0.8.0",
     "angular-moment": "^0.10.2",
     "angular-route": "^1.4.4",
@@ -18,8 +19,7 @@
     "angular-touch": "^1.4.4",
     "arrive": "^2.2.0",
     "bootstrap": "^3.3.5",
-    "bootstrap-material-design": "^0.3.0",
-    "angular-cookies": "~1.4.4"
+    "bootstrap-material-design": "^0.3.0"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.4"
