--- a/bower.json
+++ b/bower.json
@@ -19,7 +19,8 @@
     "angular-touch": "^1.4.4",
     "arrive": "^2.2.0",
     "bootstrap": "^3.3.5",
-    "bootstrap-material-design": "^0.3.0"
+    "bootstrap-material-design": "^0.3.0",
+    "q": "~2.0.2"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.4"
