--- a/bower.json
+++ b/bower.json
@@ -19,8 +19,7 @@
     "angular-touch": "^1.4.4",
     "arrive": "^2.2.0",
     "bootstrap": "^3.3.5",
-    "bootstrap-material-design": "^0.3.0",
-    "angular-slick-carousel": "~3.0.9"
+    "bootstrap-material-design": "^0.3.0"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.4"
