--- a/package.json
+++ b/package.json
@@ -22,10 +22,10 @@
     "unzip": "^0.1.11"
   },
   "devDependencies": {
-    "autoprefixer-core": "^5.2.1",
+    "autoprefixer": "^6.0.2",
     "grunt": "^0.4.5",
     "grunt-angular-templates": "^0.5.7",
-    "grunt-build-control": "^0.5.0",
+    "grunt-build-control": "^0.6.0",
     "grunt-concurrent": "^2.0.1",
     "grunt-connect-proxy": "^0.2.0",
     "grunt-contrib-clean": "^0.6.0",
@@ -46,7 +46,7 @@
     "grunt-mkdir": "^0.1.2",
     "grunt-newer": "^1.1.1",
     "grunt-ng-annotate": "^1.0.1",
-    "grunt-postcss": "^0.5.5",
+    "grunt-postcss": "^0.6.0",
     "grunt-shell": "^1.1.2",
     "grunt-svgmin": "^2.0.1",
     "grunt-usemin": "^3.0.0",
