--- a/.bithoundrc
+++ b/.bithoundrc
@@ -1,5 +1,5 @@
 {
-  "ignore" [
+  "ignore": [
     "**/app/scripts/definitions/en/DestinyArmorDefinition.js",
     "**/app/scripts/definitions/en/DestinyMedalDefinition.js",
     "**/app/scripts/definitions/en/DestinySubclassDefinition.js",
