--- a/bower.json
+++ b/bower.json
@@ -23,7 +23,8 @@
     "bootstrap": "^3.3.5",
     "bootstrap-additions": "^0.3.1",
     "bootstrap-material-design": "^0.3.0",
-    "ngstorage": "^0.3.9"
+    "ngstorage": "^0.3.9",
+    "angular-snap": "~1.8.4"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.4"
