--- a/bower.json
+++ b/bower.json
@@ -9,7 +9,6 @@
     "angulartics-google-analytics": "^0.1.0",
     "angular-animate": "^1.4.4",
     "angular-bootstrap": "^0.13.3",
-    "angular-carousel": "^0.3.12",
     "angular-loading-bar": "^0.8.0",
     "angular-moment": "^0.10.2",
     "angular-motion": "^0.4.2",
@@ -22,8 +21,7 @@
     "bootstrap": "^3.3.5",
     "bootstrap-additions": "^0.3.1",
     "bootstrap-material-design": "^0.3.0",
-    "ngstorage": "^0.3.9",
-    "ng-fastclick": "~1.0.2"
+    "ngstorage": "^0.3.9"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.4"
