--- a/bower.json
+++ b/bower.json
@@ -4,30 +4,27 @@
   "appPath": "app",
   "version": "1.1.0",
   "dependencies": {
-    "angular": "^1.4.4",
-    "angulartics": "^0.20.0",
-    "angulartics-google-analytics": "^0.1.0",
-    "angular-animate": "^1.4.4",
-    "angular-bootstrap": "^0.13.3",
-    "angular-loading-bar": "^0.8.0",
-    "angular-moment": "^0.10.2",
-    "angular-motion": "^0.4.2",
-    "angular-route": "^1.4.4",
-    "angular-sanitize": "^1.4.4",
-    "angular-strap": "^2.3.1",
-    "angular-toastr": "^1.4.1",
-    "angular-touch": "^1.4.4",
-    "arrive": "^2.2.0",
-    "bootstrap": "^3.3.5",
-    "bootstrap-additions": "^0.3.1",
-    "bootstrap-material-design": "^0.3.0",
-    "ngstorage": "^0.3.9"
+    "angular": "~1.4.7",
+    "angulartics": "~0.20.1",
+    "angulartics-google-analytics": "~0.1.1",
+    "angular-animate": "~1.4.7",
+    "angular-bootstrap": "~0.14.3",
+    "angular-loading-bar": "~0.8.0",
+    "angular-moment": "~0.10.3",
+    "angular-motion": "~0.4.3",
+    "angular-route": "~1.4.7",
+    "angular-sanitize": "~1.4.7",
+    "angular-strap": "~2.3.4",
+    "angular-toastr": "~1.5.0",
+    "angular-touch": "~1.4.7",
+    "arrive": "~2.3.0",
+    "bootstrap": "~3.3.5",
+    "bootstrap-additions": "~0.3.1",
+    "bootstrap-material-design": "~0.3.0",
+    "ngstorage": "~0.3.9"
   },
   "devDependencies": {
-    "angular-mocks": "^1.4.4"
-  },
-  "resolutions": {
-    "angular": "^1.4.4"
+    "angular-mocks": "~1.4.7"
   },
   "overrides": {
     "bootstrap": {
