--- a/package.json
+++ b/package.json
@@ -9,61 +9,54 @@
     "type": "git",
     "url": "https://github.com/DestinyTrialsReport/DestinyTrialsReport.git"
   },
-  "main": "server.js",
-  "scripts": {
-    "start": "node server.js"
-  },
-  "engines": {
-    "node": "^0.12.7"
-  },
   "dependencies": {
-    "adm-zip": "^0.4.7",
-    "compression": "^1.5.2",
-    "express": "^4.13.3",
-    "express-subdomain": "^1.0.3",
-    "request": "^2.60.0",
-    "request-promise": "^1.0.0",
-    "sqlite3": "^3.0.10",
-    "throng": "^1.0.0",
-    "unzip": "^0.1.11"
+    "adm-zip": "~0.4.7",
+    "compression": "~1.6.0",
+    "express": "~4.13.3",
+    "express-subdomain": "~1.0.4",
+    "request": "~2.65.0",
+    "request-promise": "~1.0.2",
+    "throng": "~1.0.1"
   },
   "devDependencies": {
-    "autoprefixer": "^6.0.2",
-    "grunt": "^0.4.5",
-    "grunt-angular-templates": "^0.5.7",
-    "grunt-build-control": "^0.6.0",
-    "grunt-concurrent": "^2.0.1",
-    "grunt-connect-proxy": "^0.2.0",
-    "grunt-contrib-clean": "^0.6.0",
-    "grunt-contrib-compass": "^1.0.3",
-    "grunt-contrib-compress": "^0.13.0",
-    "grunt-contrib-concat": "^0.5.1",
-    "grunt-contrib-connect": "^0.11.2",
-    "grunt-contrib-copy": "^0.8.0",
-    "grunt-contrib-cssmin": "^0.14.0",
-    "grunt-contrib-htmlmin": "^0.5.0",
-    "grunt-contrib-imagemin": "^0.9.4",
-    "grunt-contrib-jshint": "^0.11.2",
-    "grunt-contrib-uglify": "^0.9.1",
-    "grunt-contrib-watch": "^0.6.1",
-    "grunt-file-creator": "^0.1.3",
-    "grunt-filerev": "^2.3.1",
-    "grunt-karma": "^0.12.0",
-    "grunt-mkdir": "^0.1.2",
-    "grunt-newer": "^1.1.1",
-    "grunt-ng-annotate": "^1.0.1",
-    "grunt-postcss": "^0.6.0",
-    "grunt-shell": "^1.1.2",
-    "grunt-svgmin": "^2.0.1",
-    "grunt-usemin": "^3.0.0",
-    "grunt-wiredep": "^2.0.0",
-    "jasmine-core": "^2.3.4",
-    "jshint-stylish": "^2.0.1",
-    "karma": "^0.13.9",
-    "karma-jasmine": "^0.3.6",
-    "karma-phantomjs-launcher": "^0.2.1",
-    "load-grunt-tasks": "^3.2.0",
-    "phantomjs": "^1.9.18",
-    "time-grunt": "^1.2.1"
+    "autoprefixer": "~6.0.3",
+    "grunt": "~0.4.5",
+    "grunt-angular-templates": "~0.5.7",
+    "grunt-build-control": "~0.6.1",
+    "grunt-concurrent": "~2.0.3",
+    "grunt-connect-proxy": "~0.2.0",
+    "grunt-contrib-clean": "~0.6.0",
+    "grunt-contrib-compass": "~1.0.4",
+    "grunt-contrib-compress": "~0.14.0",
+    "grunt-contrib-concat": "~0.5.1",
+    "grunt-contrib-connect": "~0.11.2",
+    "grunt-contrib-copy": "~0.8.2",
+    "grunt-contrib-cssmin": "~0.14.0",
+    "grunt-contrib-htmlmin": "~0.5.0",
+    "grunt-contrib-imagemin": "~0.9.4",
+    "grunt-contrib-jshint": "~0.11.3",
+    "grunt-contrib-uglify": "~0.9.2",
+    "grunt-contrib-watch": "~0.6.1",
+    "grunt-file-creator": "~0.1.3",
+    "grunt-filerev": "~2.3.1",
+    "grunt-karma": "~0.12.1",
+    "grunt-mkdir": "~0.1.2",
+    "grunt-newer": "~1.1.1",
+    "grunt-ng-annotate": "~1.0.1",
+    "grunt-postcss": "~0.7.0",
+    "grunt-shell": "~1.1.2",
+    "grunt-svgmin": "~2.0.1",
+    "grunt-usemin": "~3.1.1",
+    "grunt-wiredep": "~2.0.0",
+    "jasmine-core": "~2.3.4",
+    "jshint-stylish": "~2.0.1",
+    "karma": "~0.13.14",
+    "karma-jasmine": "~0.3.6",
+    "karma-phantomjs-launcher": "~0.2.1",
+    "load-grunt-tasks": "~3.3.0",
+    "phantomjs": "~1.9.18",
+    "sqlite3": "~3.1.0",
+    "time-grunt": "~1.2.2",
+    "unzip": "~0.1.11"
   }
 }
