--- a/bower.json
+++ b/bower.json
@@ -21,7 +21,8 @@
     "bootstrap": "~3.3.5",
     "bootstrap-additions": "~0.3.1",
     "bootstrap-material-design": "~0.3.0",
-    "ngstorage": "~0.3.9"
+    "ngstorage": "~0.3.9",
+    "xpull": "*"
   },
   "devDependencies": {
     "angular-mocks": "~1.4.7"
