--- a/bower.json
+++ b/bower.json
@@ -22,7 +22,8 @@
     "bootstrap-additions": "~0.3.1",
     "bootstrap-material-design": "~0.3.0",
     "ngstorage": "~0.3.9",
-    "xpull": "*"
+    "xpull": "*",
+    "underscore": "~1.8.3"
   },
   "devDependencies": {
     "angular-mocks": "~1.4.7"
